BuildLab/setup-nsg.json
// This file is just being used to test the creation of a new NSG and VNet in the Spain Central region.
// This will be added into the main file later.

{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "variables": {
        "nsgName": "default-nsg",
        "subnetName": "spaincentral-subnet",
        "subnetAddressPrefixes": "10.4.0.0/24",
        "vnetLocation": "spaincentral",
        "vnetName": "spaincentral-vnet",
        "vnetAddressPrefixes": "10.4.0.0/16"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-05-01",
            "name": "[variables('nsgName')]",
            "location": "[variables('vnetLocation')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "NRMS-Rule-109",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-109",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 109,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "119",
                                "137",
                                "138",
                                "139",
                                "161",
                                "162",
                                "389",
                                "636",
                                "2049",
                                "2301",
                                "2381",
                                "3268",
                                "5800",
                                "5900"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-101",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-101",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-107",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-107",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 107,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "23",
                                "135",
                                "445",
                                "5985",
                                "5986"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-105",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-105",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 105,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "1433",
                                "1434",
                                "3306",
                                "4333",
                                "5432",
                                "6379",
                                "7000",
                                "7001",
                                "7199",
                                "9042",
                                "9160",
                                "9300",
                                "16379",
                                "26379",
                                "27017"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-108",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-108",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 108,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "13",
                                "17",
                                "19",
                                "53",
                                "69",
                                "111",
                                "123",
                                "512",
                                "514",
                                "593",
                                "873",
                                "1900",
                                "5353",
                                "11211"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-106",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-106",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 106,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-103",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-103",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "CorpNetPublic",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "NRMS-Rule-104",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/securityRules/NRMS-Rule-104",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "CorpNetSaw",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/AllowVnetInBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/DenyAllInBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/AllowVnetOutBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/AllowInternetOutBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "id": "/subscriptions/3de261df-f2d8-4c00-a0ee-a0be30f1e48e/resourceGroups/allytice-canada/providers/Microsoft.Network/networkSecurityGroups/ally-canada-nsg/defaultSecurityRules/DenyAllOutBound",
                        "etag": "W/\"4a8ebc89-a57c-4d0d-bca4-923d9233fe0b\"",
                        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-05-01",
            "name": "[variables('vnetName')]",
            "location": "[variables('vnetLocation')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetAddressPrefixes')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetAddressPrefixes')]",
                            "networkSecurityGroup": {
                                "id": "[concat(resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName')))]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
